# Loomer

./: CMakeLists.txt  Loomer.pro.user.83a8ded  mainwindow.cpp  mainwindow.h
Client/: Makefile.Debug  Makefile.Release  mainwindow.cpp  mainwindow.h  mainwindow.ui  text_brouser.html  ui_mainwindow.h
Client/.qtc_clangd/.cache/clangd/index/: mainwindow.cpp.16D005D447C0EE86.idx  mainwindow.h.5CF54E75838BBE31.idx  qflags.h.57D8CA99F9FDD05E.idx  qmetatype.h.423823D52A9D9532.idx  qobject.h.D9D23B2298ADE13A.idx  qtclasshelpermacros.h.58AEE99A28652FE2.idx  qtmetamacros.h.89D9AF00AFF746AE.idx  qtypeinfo.h.66B04B83A7BAD86B.idx  qwidget.h.B0D986D2ED4ABA9C.idx  qwindowdefs.h.9172045BD5BE8B17.idx  ui_mainwindow.h.C2FDAF9876FD2C3B.idx
Client/debug/: style.css  text_brouser.html
ClientDesktop/: CMakeLists.txt  clientdatabase.cpp  clientdatabase.h  config.cpp  config.h  config.toml  customwidgetitem.cpp  customwidgetitem.h  customwidgetitem_stile.h  datasender.cpp  datasender.h  enums.h  getpath.cpp  getpath.h  m_pack.cpp  m_pack.h  main.cpp  mainwindow.cpp  mainwindow.h  message.h  reconnection.cpp  reconnection.h  regwindow.cpp  regwindow.h  regwindow.ui  serverconnector.cpp  serverconnector.h  userdata.h
ClientDesktop/styles/: regstyle.qss
Core/: CMakeLists.txt  Mpack.cpp  Mpack.hpp  enums.h  message.h
Server/: CMakeLists.txt  Config.cpp  cliendatabase.cpp  cliendatabase.h  config.cpp  config.toml  enums.h  m_pack.cpp  m_pack.h  main.cpp  sending.cpp  sending.h  server.cpp  server.h  setcomunication.cpp  setcomunication.h
Server/Client/: CMakeLists.txt  config.h  config.json  mainwindow.cpp  mainwindow.ui  resources.qrc
Server/Server/: CMakeLists.txt  config.h  config.json  sending.cpp  server.cpp
